Added parallelization in config file and scripts

--- a/TEMPLATE.config
+++ b/TEMPLATE.config
@@ -8,6 +8,7 @@ SEQQUALITY=
 OVERLAPLEN=
 
 ###Pipeline specific locations (set this and forget it)
+CORES="8"
 FILTERMAFLOCATION="Python/filter_maf.py"
 SUBSETMAFLOCATION="Rscripts/Lastal_Filter_MAF_Output.R"
 LASTALPROBABILITIES="Shell/LastalProbabilities.sh"
